# c209-aoa-tag

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  c209.overlay  c209_nrf_boot.overlay  prj.conf  prj_base.conf  prj_debug.conf  prj_dfu_boot.conf  prj_release.conf  testable.conf  ubx_version.c  version_config.h.in
HW_Design/: C209-V2_R2-BOM-5.xls  C209.alg  C209.brd
c209_binaries/debug/: NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.hex  NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.map
c209_binaries/debug-no-boot/: NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.hex  NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.map
c209_binaries/release/: NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.hex  NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.map
c209_binaries/release-mcuboot/: NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.hex
c209_binaries/release-no-boot/: NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.hex  NINA-B4-DF-TAG-SW-20241023_131806_ae769e3-SNAPSHOT.map
child_image/: mcuboot.conf
ci/: c209_mcuboot.overlay  jenkins-build.bat  testable.conf
dfu_bootloader/: flashit  nrf52833_xxaa_bootloader.hex  packit
patches/: aux_offset_ncs_2_7.patch
scripts/: README.md  ble_tag_control.py  flash_tags.py  requirements.txt  send_tag_command.py
src/: at_host.c  at_host.h  bt_adv.c  bt_adv.h  bt_util.c  bt_util.h  buttons.c  buttons.h  leds.c  leds.h  main.c  production.c  production.h  sensors.c  sensors.h  storage.c  storage.h
tools/: astyle.cfg  format_code.sh
zephyr_patch/: radio.c  radio_diff.patch
